@@ -94,9 +94,9 @@ allow_from ^127\.0\.0\.1\z
 # communication. If the shm-module is used then the file will be used to lock
 # and unlock for read and write operations against the shared memory segment.
 #
-# It's possible to use a placeholder for the pid of the parent process: %P
+# It's possible to use a placeholder for the pid + timestamp of the parent process: %P
 #
-# Default: /var/lib/bloonix/blxipc.%P.lock
+# Default: /var/cache/bloonix/blxipc.%P.lock
 
 proc_manager {
     timeout 30
